# ostep-projects

./: CMakeLists.txt  README.md
concurrency-mapreduce/: README.md  mapreduce.h
concurrency-pzip/: README.md
concurrency-webserver/: README.md  run
concurrency-webserver/src/: Makefile  concurrent-queue.c  counter.c  index.html  io_helper.c  io_helper.h  queue.c  queue.h  request.c  request.h  spin.c  spin.cgi  temp.c  test.md  testing.c  thread-pool.c  thread-pool.h  wclient  wclient.c  wserver  wserver.c
concurrency-xv6-threads/: README.md
filesystems-distributed/: README.md  mfs.h
initial-kv/: README.md  test-kv.sh
initial-kv/tests/: 1.desc  1.run  2.desc  2.run  3.desc  3.out  3.run
initial-reverse/: README.md  test-reverse.sh
initial-reverse/tests/: 1.desc  1.err  1.run  2.desc  2.err  2.run  3.desc  3.run  4.desc  4.err  4.run  5.desc  5.in  5.post  5.pre  5.run  6.desc  6.other  6.run  7.run
initial-utilities/: README.md
initial-utilities/wcat/: README.md
initial-utilities/wgrep/: README.md
initial-utilities/wunzip/: README.md
initial-utilities/wzip/: Makefile  README.md  design  old.c  run  temp  test-wzip.sh  test0  tmep  wzip  wzip.c  wzip.c~
initial-xv6/: README.md  background.md  test-getreadcount.sh
initial-xv6/tests/: 1.desc  1.run  2.desc  2.run
processes-shell/: Makefile  README.md  builtins.c  builtins.h  cmdops.c  cmdops.h  else  error.c  error.h  main  main.c  paths.c  paths.h  redirect.c  redirect.h  run  test-wish.sh  wish
processes-shell/tests-out/: 7.err  (+2 more)
scheduling-xv6-lottery/: README.md
vm-xv6-intro/: README.md
(+4 files in other folders)
